--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "private": true,
     "scripts": {
         "build": "tsc && tsc --target ES5 --outDir lib/es5",
-        "start": "tsc --watch"
+        "start": "tsc --watch",
+        "changelog": "standard-version"
     },
     "repository": {
         "type": "git",
@@ -17,6 +18,30 @@
         "registry": "https://npm.pkg.github.com/"
     },
     "devDependencies": {
-        "typescript": "^3.9.6"
+        "typescript": "^3.9.6",
+        "standard-version": "^8.0.2"
+    },
+    "standard-version": {
+        "scripts": {
+            "prechangelog": "rm CHANGELOG.md"
+          },
+        "skip": {
+            "bump": true,
+            "changelog": false,
+            "commit": true,
+            "tag": true
+        },
+        "types": [
+            {"type": "feat", "section": "Features"},
+            {"type": "fix", "section": "Bug Fixes"},
+            {"type": "docs", "section": "Documentation", "hidden": true},
+            {"type": "style", "section": "Styling", "hidden": true},
+            {"type": "refactor", "section": "Refactors", "hidden": true},
+            {"type": "perf", "section": "Performance", "hidden": true},
+            {"type": "test", "section": "Tests", "hidden": true},
+            {"type": "build", "section": "Build System", "hidden": true},
+            {"type": "chore", "section": "Chore", "hidden": true},
+            {"type": "revert", "section": "Reverts", "hidden": true}
+        ]
     }
 }
