--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "build": "tsc && tsc --target ES5 --outDir lib/es5",
         "start": "tsc --watch",
-        "changelog": "standard-version"
+        "changelog": "conventional-changelog -i CHANGELOG.md -s"
     },
     "repository": {
         "type": "git",
@@ -19,29 +19,6 @@
     },
     "devDependencies": {
         "typescript": "^3.9.6",
-        "standard-version": "^8.0.2"
-    },
-    "standard-version": {
-        "scripts": {
-            "prechangelog": "rm CHANGELOG.md"
-        },
-        "skip": {
-            "bump": true,
-            "changelog": false,
-            "commit": true,
-            "tag": true
-        },
-        "types": [
-            {"type": "feat", "section": "Features"},
-            {"type": "fix", "section": "Bug Fixes"},
-            {"type": "docs", "section": "Documentation", "hidden": true},
-            {"type": "style", "section": "Styling", "hidden": true},
-            {"type": "refactor", "section": "Refactors", "hidden": true},
-            {"type": "perf", "section": "Performance", "hidden": true},
-            {"type": "test", "section": "Tests", "hidden": true},
-            {"type": "build", "section": "Build System", "hidden": true},
-            {"type": "chore", "section": "Chore", "hidden": true},
-            {"type": "revert", "section": "Reverts", "hidden": true}
-        ]
+        "conventional-changelog-cli": "^2.0.34"
     }
 }
