--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         ],
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "esModuleInterop": true,
         "sourceMap": true,
         "declaration": true,
         "target": "ES2015",
