--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@maurodatamapper/mdm-resources",
-    "version": "4.1.42-SNAPSHOT",
+    "version": "4.2.0",
     "main": "lib/es2015/index.js",
     "module": "lib/es2015/index.js",
     "license": "Apache-2.0",
