--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@maurodatamapper/mdm-resources",
-    "version": "4.4.0-SNAPSHOT",
+    "version": "4.3.1",
     "main": "lib/es2015/index.js",
     "module": "lib/es2015/index.js",
     "license": "Apache-2.0",
@@ -10,11 +10,7 @@
         "changelog": "conventional-changelog -i CHANGELOG.md -s",
         "test": "jest"
     },
-    "repository":  "git://github.com/MauroDataMapper/mdm-resources.git",
-    "publishConfig": {
-        "cache": "~/.npm",
-        "registry": "https://npm.pkg.github.com/"
-    },
+    "repository": "git://github.com/MauroDataMapper/mdm-resources.git",
     "devDependencies": {
         "@types/jest": "^26.0.10",
         "@types/node": "^14.6.0",
