--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "build": "tsc && tsc --target ES5 --outDir lib/es5",
         "start": "tsc --watch",
         "changelog": "conventional-changelog -i CHANGELOG.md -s",
-        "test": "jest"
+        "test": "jest",
+        "eslint": "tsc --noEmit && eslint . --ext ts --quiet --fix",
+        "eslint-report": "eslint . --ext ts --fix -f html -o eslint_report.html"
     },
     "repository": {
         "type": "git",
@@ -21,7 +23,12 @@
     "devDependencies": {
         "@types/jest": "^26.0.10",
         "@types/node": "^14.6.0",
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^4.22.0",
         "conventional-changelog-cli": "^2.1.0",
+        "eslint": "^7.24.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsdoc": "^32.3.0",
         "jest": "^26.4.2",
         "ts-jest": "^26.2.0",
         "typescript": "^3.9.6"
