--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maurodatamapper/mdm-resources",
-  "version": "5.0.0-RC1",
+  "version": "5.0.0-SNAPSHOT",
   "main": "lib/es2015/index.js",
   "module": "lib/es2015/index.js",
   "license": "Apache-2.0",
