--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,8 +21,7 @@
     "eslint-plugin-import",
     "eslint-plugin-jsdoc",
     "eslint-plugin-prefer-arrow",
-    "@typescript-eslint",
-    "@typescript-eslint/tslint"
+    "@typescript-eslint"
   ],
   "rules": {
     "@typescript-eslint/adjacent-overload-signatures": "error",
