--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "Apache-2.0",
   "scripts": {
     "clean": "rm -rf lib",
+    "clean-windows": "del /s /f /q lib",
     "build": "rm -rf lib && tsc && tsc --target ES5 --outDir lib/es5 && tsc --target ES6 --outDir lib/es6",
+    "build-windows": "del /s /f /q lib && tsc && tsc --target ES5 --outDir lib/es5 && tsc --target ES6 --outDir lib/es6",
     "start": "tsc --watch",
     "test": "jest",
     "eslint": "tsc --noEmit && eslint . --ext ts --fix",
