WIP - reconfigure the build pipeline

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "module": "lib/es2015/index.js",
   "license": "Apache-2.0",
   "scripts": {
-    "clean": "rm -rf lib",
-    "clean-windows": "del /s /f /q lib",
-    "build": "rm -rf lib && tsc && tsc --target ES5 --outDir lib/es5 && tsc --target ES6 --outDir lib/es6",
-    "build-windows": "del /s /f /q lib && tsc && tsc --target ES5 --outDir lib/es5 && tsc --target ES6 --outDir lib/es6",
-    "start": "tsc --watch",
+    "clean": "shx rm -rf lib",
+    "build-old": "rm -rf lib && tsc && tsc --target ES5 --outDir lib/es5 && tsc --target ES6 --outDir lib/es6",
+    "build:es5": "tsc",
+    "build:es6": "tsc --target es6 --outDir lib/es6",
+    "build:es2015": "tsc --target es2015 --outDir lib/es2015",
+    "build": "npm run clean && npm run build:es5 && npm run build:es6 && npm run build:es2015",
+    "start": "npm run build:es2015 -- --watch",
     "test": "jest",
     "eslint": "tsc --noEmit && eslint . --ext ts --fix",
     "eslint-nofix": "tsc --noEmit && eslint . --ext ts",
@@ -38,6 +40,7 @@
     "license-check-and-add": "^4.0.2",
     "prettier": "2.1.2",
     "prettier-eslint": "11.0.0",
+    "shx": "^0.3.4",
     "ts-jest": "^26.2.0",
     "typedoc": "^0.20.32",
     "typescript": "^3.9.6"
