--- a/license-check-and-add-config.json
+++ b/license-check-and-add-config.json
@@ -8,6 +8,7 @@
     "test-report.xml",
     "test-report",
     "browserslist",
+    ".prettierignore",
     ".scannerwork",
     ".DS_Store",
     ".editorconfig",
