--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,6 @@ jobs:
         
         
       - name: Install tools
-        
         run: |
           npm i -g npm@10.2.3
           npm i -g npm-check
@@ -47,6 +46,22 @@ jobs:
           LINTER_RULES_PATH: '.eslintrc.json' # This is the default anyway
           DISABLE_ERRORS: true #Flag to have the linter complete with exit code 0 even if errors were detected.
           SARIF_REPORTER: true
+            
+      - name: Upload MegaLinter scan results to GitHub Security tab
+        if: ${{ success() }} || ${{ failure() }}
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'megalinter-reports/megalinter-report.sarif'
+            
+            
+      - name: Archive lint reports
+        if: ${{ success() }} || ${{ failure() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: MegaLinter reports
+          path: |
+            megalinter-reports
+            mega-linter.log
                       
       - name: Build
         run: npm run build
