--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,14 +61,14 @@ jobs:
           sarif_file: 'megalinter-reports/megalinter-report.sarif'
             
             
-      #- name: Archive lint reports
-      #  if: ${{ success() }} || ${{ failure() }}
-      #  uses: actions/upload-artifact@v4
-      #  with:
-      #    name: MegaLinter reports
-      #    path: |
-      #      megalinter-reports
-      #      mega-linter.log
+      - name: Archive lint reports
+        if: ${{ success() }} || ${{ failure() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: MegaLinter reports
+          path: |
+            megalinter-reports
+            mega-linter.log
                       
       - name: Build
         run: npm run build
