--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,6 +53,10 @@ jobs:
           LINTER_RULES_PATH: '.eslintrc.json' # This is the default anyway
           DISABLE_ERRORS: true #Flag to have the linter complete with exit code 0 even if errors were detected.
           SARIF_REPORTER: true
+          GITHUB_STATUS_REPORTER: true
+          GITHUB_COMMENT_REPORTER: true
+          MARKDOWN_SUMMARY_REPORTER: true
+          
                     
       - name: Upload MegaLinter scan results to GitHub Security tab
         if: ${{ success() }} || ${{ failure() }}
@@ -61,14 +65,14 @@ jobs:
           sarif_file: 'megalinter-reports/megalinter-report.sarif'
             
             
-      - name: Archive lint reports
-        if: ${{ success() }} || ${{ failure() }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: MegaLinter reports
-          path: |
-            megalinter-reports
-            mega-linter.log
+      #- name: Archive lint reports
+      #  if: ${{ success() }} || ${{ failure() }}
+      #  uses: actions/upload-artifact@v4
+      #  with:
+      #    name: MegaLinter reports
+      #    path: |
+      #      megalinter-reports
+      #      mega-linter.log
                       
       - name: Build
         run: npm run build
